# SimpleOnnxInference

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt
.github/workflows/: cmake.yml
cmake/: FindOpenCV.cmake
scripts/: getTorchvisionModel.py  installRequirements.sh  installRequirementsOsx.sh  installRequirementsWin.ps1  installonnxruntime.sh
src/: FileSystem.cpp  FileSystem.h  OnnxInferenceRunner.cpp  OnnxInferenceRunner.h  exceptions.h  imageOperations.cpp  imageOperations.h  main.cpp  test.cpp  vectorOperations.h
